<resources>
    <string name="app_name">Ebrozon</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Nombre">EBROZON</string>
    <string name="Iniciar">Iniciar sesión</string>
    <string name="Preguntar">¿No tienes cuenta?</string>
    <string name="Registrar">Registrate</string>
    <string name="olvidar">¿Has olvidado tu contraseña?</string>
    <string name="DescripcionLogo">Logo</string>
    <string name="title_activity_inicio_sesion">Sign in</string>
    <string name="title_activity_registro">Registrarse</string>
    <string name="mostrar">Pulsa para mostrar contraseña.</string>
    <string name="TextoNombreCompleto">NOMBRE COMPLETO</string>
    <string name="TextoNombreUsuario">NOMBRE DE USUARIO</string>
    <string name="TextoEmail">CORREO ELECTRÓNICO</string>
    <string name="TextoPassword">CONTRASEÑA</string>
    <string name="TextoPassword2">REPITE LA CONTRASEÑA</string>
    <string name="TextoProvincia">PROVINCIA</string>
    <string name="Bienvenida">Crea una cuenta en <b>Ebrozon</b>.</string>
    <string name="NombreCompleto">Nombre y apellido</string>
    <string name="NombreUsuario">Nombre de usuario</string>
    <string name="Password">Contraseña</string>
    <string name="Password2">Repite la contraseña</string>
    <string name="Ciudad">Ciudad</string>
    <string name="Email">Correo electrónico</string>
    <string-array name="ListaProvincias">
        <item>...</item>
        <item>A Coruña</item>
        <item>Álava</item>
        <item>Albacete</item>
        <item>Alicante</item>
        <item>Almería</item>
        <item>Asturias</item>
        <item>Ávila</item>
        <item>Badajoz</item>
        <item>Baleares</item>
        <item>Barcelona</item>
        <item>Burgos</item>
        <item>Cáceres</item>
        <item>Cádiz</item>
        <item>Cantabria</item>
        <item>Castellón</item>
        <item>Ceuta</item>
        <item>Ciudad Real</item>
        <item>Córdoba</item>
        <item>Cuenca</item>
        <item>Girona</item>
        <item>Granada</item>
        <item>Guadalajara</item>
        <item>Gipuzkoa</item>
        <item>Huelva</item>
        <item>Huesca</item>
        <item>Jaén</item>
        <item>La Rioja</item>
        <item>Las Palmas</item>
        <item>León</item>
        <item>Lérida</item>
        <item>Lugo</item>
        <item>Madrid</item>
        <item>Málaga</item>
        <item>Melilla</item>
        <item>Murcia</item>
        <item>Navarra</item>
        <item>Ourense</item>
        <item>Palencia</item>
        <item>Pontevedra</item>
        <item>Salamanca</item>
        <item>Segovia</item>
        <item>Sevilla</item>
        <item>Soria</item>
        <item>Tarragona</item>
        <item>Santa Cruz de Tenerife</item>
        <item>Teruel</item>
        <item>Toledo</item>
        <item>Valencia</item>
        <item>Valladolid</item>
        <item>Vizcaya</item>
        <item>Zamora</item>
        <item>Zaragoza</item>
    </string-array>
    <string-array name="ListaProvinciasFiltros">
        <item>Todas las provincias</item>
        <item>A Coruña</item>
        <item>Álava</item>
        <item>Albacete</item>
        <item>Alicante</item>
        <item>Almería</item>
        <item>Asturias</item>
        <item>Ávila</item>
        <item>Badajoz</item>
        <item>Baleares</item>
        <item>Barcelona</item>
        <item>Burgos</item>
        <item>Cáceres</item>
        <item>Cádiz</item>
        <item>Cantabria</item>
        <item>Castellón</item>
        <item>Ceuta</item>
        <item>Ciudad Real</item>
        <item>Córdoba</item>
        <item>Cuenca</item>
        <item>Girona</item>
        <item>Granada</item>
        <item>Guadalajara</item>
        <item>Gipuzkoa</item>
        <item>Huelva</item>
        <item>Huesca</item>
        <item>Jaén</item>
        <item>La Rioja</item>
        <item>Las Palmas</item>
        <item>León</item>
        <item>Lérida</item>
        <item>Lugo</item>
        <item>Madrid</item>
        <item>Málaga</item>
        <item>Melilla</item>
        <item>Murcia</item>
        <item>Navarra</item>
        <item>Ourense</item>
        <item>Palencia</item>
        <item>Pontevedra</item>
        <item>Salamanca</item>
        <item>Segovia</item>
        <item>Sevilla</item>
        <item>Soria</item>
        <item>Tarragona</item>
        <item>Santa Cruz de Tenerife</item>
        <item>Teruel</item>
        <item>Toledo</item>
        <item>Valencia</item>
        <item>Valladolid</item>
        <item>Vizcaya</item>
        <item>Zamora</item>
        <item>Zaragoza</item>
    </string-array>
    <string-array name="ListaOrdenacionFiltros">
        <item>Más recientes primero</item>
        <item>Más antiguos primero</item>
        <item>Más baratos primero</item>
        <item>Más caros primero</item>
        <item>Más popular primero</item>
        <item>Mejor coincidencia primero</item>
        <item>Mejor valoración primero</item>
        <item>Más cercanos primero</item>
    </string-array>
    <string-array name="ListaCategoriasFiltros">
        <item>Todas las categorías</item>
        <item>Motor y accesorios</item>
        <item>Tv, audio, foto y vídeo</item>
        <item>Informática y electrónica</item>
        <item>Cine, libros y música</item>
        <item>Deporte y ocio</item>
        <item>Hogar y jardín</item>
        <item>Electrodomésticos</item>
        <item>Moda y accesorios</item>
        <item>Niños y bebés</item>
        <item>Industria y agricultura</item>
        <item>Empleo y servicios</item>
        <item>Otros</item>
    </string-array>
    <string-array name="ListaTipoFiltros">
        <item>Todos</item>
        <item>Sólo ventas</item>
        <item>Sólo subastas</item>
    </string-array>
    <string name="TextoOrdenacion">ORDEN</string>
    <string name="TextoCategoria">CATEGORÍA</string>
    <string name="TextoTipo">TIPO</string>
    <string name="TextoPrecioMinimo">PRECIO MÍNIMO</string>
    <string name="TextoPrecioMaximo">PRECIO MÁXIMO</string>
    <string name="TextoDistanciaMaxima">DISTANCIA MÁXIMA</string>
    <string name="title_activity_pantalla_principal">PantallaPrincipal</string>
    <string name="SubirProducto">Subir producto</string>
    <string name="title_activity_pruebas">Pruebas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_button">Menu button</string>
    <string name="title_activity_subir_producto_1_3">Información básica del producto.</string>
    <string name="title_activity_subir_producto_2_3">Precio del producto.</string>
    <string name="title_activity_subir_producto_3_3">Categoría del producto.</string>
    <string name="nombre_del_producto">NOMBRE DEL PRODUCTO</string>
    <string name="subir_producto">Subir producto</string>
    <string name="precio_del_producto">PRECIO DEL PRODUCTO</string>
    <string name="descripcion_del_producto">DESCRIPCIÓN DEL PRODUCTO</string>
    <string name="Ejemplo">Ejemplo</string>
    <string name="Filtros">Filtros</string>
    <string name="Icono">Icono</string>
    <string name="Aplicar">Aplicar</string>
    <string name="Restablecer">Restablecer</string>
    <string name="FiltroTexto">Filtros disponibles.</string>
    <string name="FiltroTodos">Mostrar productos de todas las ciudades</string>
    <string name="Seguir">Seguir</string>
    <string name="Precio">Precio</string>
    <string name="Producto">Producto</string>
    <string name="Principal">Principal</string>
    <string name="Siguiendo">Siguiendo</string>
    <string name="En_venta">En venta</string>
    <string name="Comunicacion">Comunicación</string>
    <string name="Mensajes">Mensajes</string>
    <string name="escribe_un_mensaje">Escribe un mensaje</string>
    <string name="Perfil">Perfil</string>
    <string name="Ajustes">Ajustes</string>
    <string name="Cerrar_sesion">Cerrar sesión</string>
    <string name="ofertas_y_pujas_enviadas">Ofertas y compras enviadas</string>
    <string name="boton_cancelar_oferta">Cancelar oferta</string>
    <string name="boton_cancelar_compra">Cancelar compra</string>
    <string name="boton_iniciar_chat">Chatear con el vendedor</string>
    <string name="ofertas_y_pujas_recibidas">Ofertas y compras recibidas</string>
    <string name="tipo_oferta_recibida">Oferta</string>
    <string name="tipo_compra_pendiente">Compra pendiente</string>
    <string name="boton_aceptar_oferta">Aceptar oferta</string>
    <string name="boton_rechazar_oferta">Rechazar oferta</string>
    <string name="boton_aceptar_pago">Confirmar pago</string>
    <string name="boton_rechazar_pago">Reabrir venta</string>
    <string name="precio_de_venta_instantanea">Precio de venta instantanea</string>
    <string name="precio_inicial_del_producto">PRECIO INICIAL DEL PRODUCTO</string>
    <string name="fecha_limite_subasta">FECHA LIMITE SUBASTA</string>
    <string name="simbolo_euro">€</string>
    <string name="hora_limite_subasta">HORA LIMITE SUBASTA</string>
    <string name="anterior">ANTERIOR</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="subir">SUBIR</string>
    <string name="paso_1_de_3">PASO 1 DE 3</string>
    <string name="paso_2_de_3">PASO 2 DE 3</string>
    <string name="paso_3_de_3">PASO 3 DE 3</string>
    <string name="todo">TODO</string>
    <string name="publicar_como_subasta">Publicar como subasta</string>
    <string name="textview">TextView</string>
    <string name="title_activity_perfil">Tu perfil</string>
    <string name="TituloPerfil">Tu perfil</string>
    <string name="TituloOpinion">Valoraciones</string>
    <string name="NombrePerfil">NOMBRE</string>
    <string name="EmailPerfil">DIRECCIÓN DE CORREO</string>
    <string name="ProvinciaPerfil">PROVINCIA</string>
    <string name="CiudadPerfil">CIUDAD</string>
    <string name="VentasRealizadas">Ventas: </string>
    <string name="ComprasRealizadas">Compras: </string>
    <string name="BotonChat">Chat</string>
    <string name="BotonInformar">Informar</string>
    <string name="BotonValoraciones2">Mis Valoraciones</string>
    <string name="BotonValoraciones1">Valoraciones de usuarios</string>
    <string name="title_activity_editarperfil">Edita tu perfil</string>
    <string name="TituloEditarPerfil">Edita tu perfil</string>
    <string name="TituloEditarInfo">Información</string>
    <string name="TituloEditarAjustes">Ajustes</string>
    <string name="BotonConfirmarEditar">Aplicar cambios</string>
    <string name="EditarFoto">FOTO DE PERFIL</string>
    <string name="ActualizarPosicion">Actualizar posición ventas</string>
    <string name="CambiarContraseña">Cambiar tu contraseña</string>
    <string name="cat1">Motor y accesorios</string>
    <string name="cat2">Tv, audio, foto y vídeo</string>
    <string name="cat3">Informática y electrónica</string>
    <string name="cat4">Cine, libros y música</string>
    <string name="cat5">Deporte y ocio</string>
    <string name="cat6">Hogar y jardín</string>
    <string name="cat7">Electrodomésticos</string>
    <string name="precioOfrecido">Ofrecer esta cantidad</string>
    <string name="elVendedorPide">El vendedor pide X </string>
    <string name="cancelar">Cancelar</string>
</resources>